--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,121 @@
-.App {
-  text-align: center;
+html {
+  min-height: 100%;
+  /* background-image: repeating-linear-gradient(60deg, rgb(255, 255, 255), rgb(255, 255, 255) 25px, #ffecec 25px, #ffecec 70px); */
+  background-image: linear-gradient(rgba(0, 1, 37, 0.8), rgb(0, 1, 37)), url("https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.technocrazed.com%2Fwp-content%2Fuploads%2F2015%2F11%2FHD-Galaxy-Wallpaper.jpg&f=1&nofb=1");
+  background-position: fixed;
+  background-size: cover;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+div.navbarItems:hover>div {
+  opacity: 0.5
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+div.navbarItems:hover>div:hover {
+  opacity: 1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#navbarItem {
+  font-size: 1.1rem;
+}
+
+.homePage {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: flex-end;
+  align-items: flex-start;
+  gap: 5rem;
+  margin-top: 20px
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  /* row-gap: 1.2rem; */
+  gap: 1.2rem;
+  width: 60%;
+  margin-left: 20px;
+}
+
+.homeCard {
+  --animate-duration: 0.5s;
+}
+
+.homeCard {
+  --animate-delay: 0.07s;
+}
+
+.aboutMeButton {
+  width: 3rem;
+  background-color: white;
+  height: 5rem;
+  border-radius: 5px 0 0 5px;
+  opacity: 0.9;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+.aboutMeSidePanel {
+  /* background-color: #fff; */
+  opacity: 0.7;
+  border-radius: 5px 0 0 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.aboutMeSide {
+  background-color: #fff;
+  opacity: 0.7;
+  width: 35%;
+  border-radius: 5px 0 0 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.aboutMeTitleandImage {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 10px;
+  /* margin-left: -3rem; */
+}
+
+
+
+@media only screen and (min-width: 1200px) {
+  .aboutMeButton {
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
+  
+}
+
+@media only screen and (max-width: 1200px) {
+  .homePage {
+    gap: 2rem;
   }
+
+  .cards {
+    grid-template-columns: auto auto;
+    width: 80%;
+  }
+
+  .aboutMeSide {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+    .cards {
+      grid-template-columns: auto;
+      margin-right: -20px;
+      /* width: 100%; */
+    }
 }
