--- a/src/App.css
+++ b/src/App.css
@@ -107,6 +107,7 @@ div.navbarItems:hover>div:hover {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin-top: 30px;
 }
 
 .contactBox {
@@ -119,6 +120,12 @@ div.navbarItems:hover>div:hover {
   padding: 20px 50px 50px 50px;
   box-sizing: border-box;
   gap: 2rem;
+}
+
+.loginAlert {
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
 .firstAndLastname {
